feat : user authentification
+ auth/signup.js -> user register, send verification email
+ auth/login.js -> user login, get jwtToken from server
+ auth/jwtdecode.js -> decode jwtToken for user
+ auth/active.js -> email authenfication client - enable
+ models/token.js -> verify token for email-auth
+ models/authlog.js -> save user auth log on database
+ models/user.js -> user model
