# routes/swagger.yaml
@@ -24,7 +24,7 @@ paths:
     post:
       tags:
         - account
-      summary: Generate User Account
+      summary: User SignUp
       description: api node for generating user account
       operationId: createUser
       produces:
@@ -50,7 +50,7 @@ paths:
           type: string
         - name: phone
           in: formData
-          description: telnumber of user account (only number)
+          description: telnumber of user account
           required: true
           type: string
       responses:
@@ -70,6 +70,105 @@ paths:
             resend verification email in application.
         '500':
           description: unknown server error occured (cause of network status)
+  /auth/active:
+    get:
+      tags:
+        - account
+      summary: User Activation
+      description: api node for activating account
+      operationId: activeUser
+      produces:
+        - application/json
+        - application/xml
+      parameters:
+        - name: email
+          in: query
+          description: The user email for activation
+          required: true
+          type: string
+        - name: token
+          in: query
+          description: The token for activation
+          required: true
+          type: string
+      responses:
+        default:
+            description: default reponse model
+            schema:
+              $ref: "#/definitions/apiResult"
+        '200':
+          description: account email activiation finished.
+        '409':
+          description: account client provided not exist or already activated.
+        '412':
+          description: data client provided doesn't satisfy format.
+        '500':
+          description: unknown server error occured (cause of network status)
+  /auth/login:
+    post:
+      tags:
+        - account
+      summary: User Login
+      description: api node for getting jwt token
+      operationId: loginUser
+      produces:
+        - application/json
+        - application/xml
+      consumes:
+        - application/x-www-form-urlencoded
+      parameters:
+        - name: email
+          in: formData
+          description: email of account
+          required: true
+          type: string
+        - name: password
+          in: formData
+          description: password of account
+          required: true
+          type: string
+      responses:
+        default:
+            description: default reponse model
+            schema:
+              $ref: "#/definitions/apiResult"
+        '200':
+          description: user login succeed and json token published
+          schema:
+            $ref: "#/definitions/apiLoginResult"
+        '409':
+          description: account client provided not exist
+        '412':
+          description: data client provided doesn't satisfy format.
+        '500':
+          description: unknown server error occured (cause of network status)
+  /auth/jwtdecode:
+    get:
+      tags:
+        - account
+      summary: JWT Token Decode
+      description: api node for decoding jwt token
+      operationId: jwtdecode
+      produces:
+        - application/json
+        - application/xml
+      parameters:
+        - name: token
+          in: query
+          description: The token for verification
+          required: true
+          type: string
+      responses:
+        default:
+            description: default reponse model
+            schema:
+              $ref: "#/definitions/apiResult"
+        '200':
+          description: jwt token decoded
+          schema:
+            $ref: "#/definitions/UserInfo"
+        '500':
+          description: jwt token decode failed
 definitions:
   apiResult:
     type: object
@@ -78,3 +177,29 @@ definitions:
         type: string
       error:
         type: string
+  apiLoginResult:
+    type: object
+    properties:
+      result: 
+        type: string
+      token:
+        type: string
+  UserInfo:
+    type: object
+    properties:
+      enable: 
+        type: boolean
+      email:
+        type: string
+      name:
+        type: string
+      phone:
+        type: string
+      lastlogin:
+        type: string
+        format: date
+        pattern: 'yyyy-MM-dd hh:mm:ss'
+      created:
+        type: number
+      expired:
+        type: number
